err/simplecv.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SimpleCV'...
Compiling './lib/python3.5/site-packages/SimpleCV/Camera.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/Camera.py", line 363
    print "coord: (" + str(d.mouseX) + "," + str(d.mouseY) + "), color: " + str(i.getPixel(d.mouseX,d.mouseY))
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SimpleCV/Color.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/Color.py", line 213
    print a
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SimpleCV/DrawingLayer.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/DrawingLayer.py", line 40
    def __init__(self, (width, height)):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SimpleCV/EXIF.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/EXIF.py", line 1182
    y = 0L
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/SimpleCV/Features'...
Compiling './lib/python3.5/site-packages/SimpleCV/Features/BOFFeatureExtractor.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/Features/BOFFeatureExtractor.py", line 68
    print "Opening file: " + infile
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SimpleCV/Features/Blob.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/Features/Blob.py", line 876
    print self.mHullMask
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SimpleCV/Features/BlobMaker.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/Features/BlobMaker.py", line 97
    except RuntimeError,e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SimpleCV/Font.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/Font.py", line 68
    print "Please pass a string"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SimpleCV/ImageClass.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/ImageClass.py", line 132
    print "You need to install Beatutiul Soup to use this function"
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/SimpleCV/MachineLearning'...
Compiling './lib/python3.5/site-packages/SimpleCV/MachineLearning/KNNClassifier.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/MachineLearning/KNNClassifier.py", line 153
    print "Opening file: " + infile
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SimpleCV/MachineLearning/NaiveBayesClassifier.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/MachineLearning/NaiveBayesClassifier.py", line 120
    print "Opening file: " + infile
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SimpleCV/MachineLearning/SVMClassifier.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/MachineLearning/SVMClassifier.py", line 181
    print "Opening file: " + infile
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SimpleCV/MachineLearning/TreeClassifier.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/MachineLearning/TreeClassifier.py", line 190
    print "Opening file: " + infile
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/SimpleCV/Segmentation'...
Listing './lib/python3.5/site-packages/SimpleCV/Shell'...
Compiling './lib/python3.5/site-packages/SimpleCV/Shell/Example.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/Shell/Example.py", line 28
    print "Available Examples:"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SimpleCV/Shell/Shell.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/Shell/Shell.py", line 71
    print "args", arg
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SimpleCV/Shell/Tutorial.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/Shell/Tutorial.py", line 35
    print lb
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SimpleCV/Stream.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/Stream.py", line 62
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SimpleCV/base.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/base.py", line 139
    print 'unit test'
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/SimpleCV/tests'...
Compiling './lib/python3.5/site-packages/SimpleCV/tests/YCrCbtests.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/tests/YCrCbtests.py", line 6
    print "Converted to YCrCb\n"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SimpleCV/tests/test_cameras.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/tests/test_cameras.py", line 17
    print str(i) + ": " + str(props[i]) + "\n"
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SimpleCV/tests/test_display.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/tests/test_display.py", line 80
    print val
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SimpleCV/tests/test_optional.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/tests/test_optional.py", line 91
    print foundtext
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SimpleCV/tests/test_stereovision.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/tests/test_stereovision.py", line 54
    print val
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SimpleCV/tests/tests.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/tests/tests.py", line 74
    print val
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SimpleCV/tests/vcamera_tests.py'...
***   File "./lib/python3.5/site-packages/SimpleCV/tests/vcamera_tests.py", line 19
    print str(i) + ": " + str(props[i]) + "\n"
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/SimpleCV-1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
